--- a/site/css/syntax.css
+++ b/site/css/syntax.css
@@ -1,9 +1,9 @@
 pre {
-    background-color: #F5FCFF;
+    background-color: #F3FAFD;
 }
 
 code {
-    background-color: #F5FCFF;
+    background-color: #F3FAFD;
     color: #268BD2;
 }
 
