--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -10,10 +10,9 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    {{>site/templates/header.html}}
 <div id="page">
             <section class="table-of-contents">
-                <h1>All Posts</h1>
+                <h1>Posts</h1>
                 <div class="metadata">
                 </div>
                 {{>site/templates/post-list.html}}
