--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -42,7 +42,7 @@ html {
 /* Variables */
 html {
   font-family: georgia, serif;
-  color: #333;
+  color: #222;
   background: #fffffc;
   background: -webkit-linear-gradient(
     top,
@@ -166,7 +166,7 @@ header {
 @media only screen and (max-width: 750px) {
   header {
     height: 3em;
-    background: #333;
+    background: #222;
     color: #fffffc;
   }
 }
@@ -180,20 +180,8 @@ footer {
   clear: both;
 }
 
-.photo {
-  border-radius: 25px;
-  border: 1px solid black;
-}
-
-.blog {
-  display: table;
-  width: 100%;
-  height: 100%;
-  margin: auto;
-}
-
 .title {
-  font-family: "Alegreya", helvetica, sans-serif;
+  font-family: helvetica, sans-serif;
   font-weight: 400;
   font-size: 3em;
   text-transform: capitalize;
@@ -248,6 +236,10 @@ footer {
   margin: auto;
 }
 
+.masthead * + * {
+  margin-top: 1em;
+}
+
 .post-image {
   height: auto;
   width: 400px;
@@ -259,7 +251,7 @@ footer {
 }
 
 .date {
-  color: rgba(128, 128, 128, 0.7);
+  color: #888;
   font-size: 0.9em;
   font-style: italic;
   font-family: helvetica, sans-serif;
@@ -329,7 +321,7 @@ footer {
 .table-of-contents h1 {
   font-size: 3em;
   text-align: center;
-  font-family: "Alegreya", helvetica, sans-serif;
+  font-family: helvetica, sans-serif;
 }
 
 .table-of-contents ul {
@@ -339,13 +331,14 @@ footer {
 
 .table-of-contents li {
   width: 100%;
+  margin: 0;
 }
 
 .table-of-contents li a {
-  color: #333;
+  color: #222;
+  background: #f8f8f6;
   font-weight: normal;
   box-sizing: border-box;
-  border-top: 1px solid #444;
   display: block;
   width: 50%;
   min-width: 300px;
@@ -357,8 +350,12 @@ footer {
   align-items: baseline;
 }
 
+.table-of-contents li:nth-child(odd) a {
+  background: #eeeeec;
+}
+
 .table-of-contents li a:hover {
-  background: #333;
+  background: #222;
   color: #fffffc;
   opacity: inherit;
   text-decoration: none;
@@ -399,6 +396,7 @@ footer {
 .social-links {
   display: flex;
   justify-content: center;
+  margin-bottom: 1em;
 }
 
 .social-link-wrapper {
