--- a/site/templates/footer.html
+++ b/site/templates/footer.html
@@ -15,7 +15,9 @@
         </div>
         {{/twitterHandle}}
     </div>
-    Built with Haskell using <a href="https://github.com/ChrisPenner/slick">slick</a> ❤️
+    <div id="copyright">&copy; 2020 <a href="mailto:fredriksson.olle@gmail.com">Olle Fredriksson</a> — <a href="/atom.xml">Feed</a></div>
+
+    Built using <a href="https://github.com/ChrisPenner/slick">slick</a> ❤️
 </footer>
 
 <script src="/js/main.js"></script>
