--- a/site/templates/footer.html
+++ b/site/templates/footer.html
@@ -3,14 +3,14 @@
         {{#githubUser}}
         <div class="social-link-wrapper">
             <a class="social-link" href="https://github.com/{{githubUser}}">
-                <img src="/images/github-logo.svg" alt="Github profile"/>
+                <img src="/blog/images/github-logo.svg" alt="Github profile"/>
             </a>
         </div>
         {{/githubUser}}
         {{#twitterHandle}}
         <div class="social-link-wrapper">
             <a class="social-link" href="https://twitter.com/{{twitterHandle}}">
-                <img src="/images/twitter-logo.svg" alt="Twitter profile"/>
+                <img src="/blog/images/twitter-logo.svg" alt="Twitter profile"/>
             </a>
         </div>
         {{/twitterHandle}}
@@ -20,6 +20,6 @@
     Built using <a href="https://github.com/ChrisPenner/slick">slick</a> ❤️
 </footer>
 
-<script src="/js/main.js"></script>
+<script src="/blog/js/main.js"></script>
 </body>
 </html>
