--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -21,7 +21,7 @@
             </span>
 
             {{#image}}
-            <img class="post-image" src="/images/{{image}}">
+            <img class="post-image" src="/blog/images/{{image}}">
             {{/image}}
 
             {{#author}}
