Update more links

--- a/site/templates/index.html
+++ b/site/templates/index.html
@@ -6,8 +6,8 @@
     <meta name="author" content="{{siteAuthor}}">
     <meta name=viewport content="width=device-width, initial-scale=1">
     <title>{{siteTitle}}</title>
-    <link rel="icon" type="image/png" href="/images/favicon.png">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" type="image/png" href="/blog/images/favicon.png">
+    <link rel="stylesheet" href="/blog/css/style.css">
 </head>
 <body>
 <div id="page">
