--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -7,8 +7,8 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
     {{>site/templates/meta-data.html}}
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/syntax.css">
+    <link rel="stylesheet" href="/blog/css/style.css">
+    <link rel="stylesheet" href="/blog/css/syntax.css">
 </head>
 <body>
     {{>site/templates/header.html}}
