--- a/site/templates/header.html
+++ b/site/templates/header.html
@@ -1,6 +1,6 @@
 <header>
     <nav>
-        <a id="beacon" href="/blog">
+        <a id="beacon" href="{{basePath}}/">
             <div>Back</div>
         </a>
     </nav>
