--- a/site/templates/post-list.html
+++ b/site/templates/post-list.html
@@ -1,7 +1,7 @@
 <ul>
     {{#posts}}
         <li>
-            <a href="{{url}}"><span>{{title}}</span><span class="date">{{date}}</span></a>
+            <a href="{{basePath}}/{{url}}"><span>{{title}}</span><span class="date">{{date}}</span></a>
         </li>
     {{/posts}}
 </ul>
