--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -7,6 +7,7 @@
     <meta name=viewport content="width=device-width, initial-scale=1">
     {{>site/templates/meta-data.html}}
     <title>{{title}}</title>
+    <link rel="icon" type="image/png" href="{{basePath}}/images/favicon.png">
     <link rel="stylesheet" href="{{basePath}}/css/style.css">
     <link rel="stylesheet" href="{{basePath}}/css/syntax.css">
 </head>
