--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -312,6 +312,34 @@ footer {
   display: block;
 }
 
+.post table {
+  margin-top: 1em;
+  margin-left: auto;
+  margin-right: auto;
+  border-collapse: collapse;
+}
+
+.post table tr.odd {
+  background: #eee;
+}
+
+.post table tr.even {
+  background: #fff;
+}
+
+.post table tr.header {
+  background: #222;
+  color: #fffffc;
+}
+
+.post table th {
+  padding: 0.7em;
+}
+
+.post table td {
+  padding: 0.6em;
+}
+
 .table-of-contents {
   clear: both;
   width: 100%;
