--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -166,8 +166,11 @@ header {
 @media only screen and (max-width: 750px) {
   header {
     height: 3em;
-    background: #222;
-    color: #fffffc;
+    background: #2d2d2d;
+    color: #fff;
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.4);
+    -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.4);
+    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.4);
   }
 }
 
@@ -319,17 +322,17 @@ footer {
   border-collapse: collapse;
 }
 
+.post table tr.header {
+  background: #2d2d2d;
+  color: #fff;
+}
+
 .post table tr.odd {
   background: #eee;
 }
 
 .post table tr.even {
   background: #fff;
-}
-
-.post table tr.header {
-  background: #222;
-  color: #fffffc;
 }
 
 .post table th {
