Change post description and page title

--- a/site/templates/post.html
+++ b/site/templates/post.html
@@ -2,11 +2,11 @@
 <html lang="en"> 
 <head profile="http://www.w3.org/2005/10/profile">
     <meta charset="UTF-8">
-    <meta name="description" content="{{siteTitle}}">
+    <meta name="description" content="{{description}}">
     <meta name="author" content="{{author}}">
     <meta name=viewport content="width=device-width, initial-scale=1">
     {{>site/templates/meta-data.html}}
-    <title>{{title}}</title>
+    <title>{{title}} | {{siteTitle}}</title>
     <link rel="icon" type="image/png" href="{{basePath}}/images/favicon.png">
     <link rel="stylesheet" href="{{basePath}}/css/style.css">
     <link rel="stylesheet" href="{{basePath}}/css/syntax.css">
