Remove redundant div

--- a/site/templates/header.html
+++ b/site/templates/header.html
@@ -1,7 +1,7 @@
 <header>
     <nav>
-        <a id="beacon" href="{{basePath}}/">
-            <div>Back</div>
+        <a href="{{basePath}}/">
+            Back
         </a>
     </nav>
 </header>
