--- a/site/css/style.css
+++ b/site/css/style.css
@@ -124,7 +124,7 @@ blockquote > p {
 
 ul,
 ol {
-  list-style-position: inside;
+  list-style-position: outside;
   margin: 1em 0 1em 2em;
 }
 
@@ -286,11 +286,6 @@ footer {
 
 .post p + p {
   margin-top: 1em;
-}
-
-.post ul {
-  list-style-type: disc;
-  text-indent: -1em;
 }
 
 .post ul li {
